# dynamic_view_planning

./: CMakeLists.txt  package.xml
config/: alfredo.txt  calle_1.txt  eval.txt  fish_1.txt  loop_finished.txt  pi.txt  pi_finished.txt  pi_long.txt  test.txt  village.txt
include/dynamic_view_planning/: evaluation_tools.hpp  ig_server.hpp  test.hpp  tools.hpp  ufomap_compare.hpp  ufomap_ig_calculator.hpp  ufomap_world_representation.hpp  view_planner.hpp  view_space.hpp  virtual_robot.hpp
launch/: create_view_space.launch  evaluation.launch  generate_reference_map.launch  test.launch  view_planner.launch  view_planner_mod.launch  world.launch
src/code_base/: evaluation_tools.cpp  ig_server.cpp  test.cpp  ufomap_compare.cpp  ufomap_ig_calculator.cpp  ufomap_world_representation.cpp  view_planner.cpp  virtual_robot.cpp
src/ros_nodes/: create_view_space.cpp  dynamic_view_planning_node.cpp  evaluation_node.cpp  generate_reference_map.cpp  ig_calculator_node.cpp  ig_server_node.cpp  robot_node.cpp  split_bag_node.cpp  talker_node.cpp  test_node.cpp  world_rep_node.cpp  world_representation_node.cpp
srv/: AnalyseFile.srv  ChangeCamera.srv  RequestIG.srv
