<?xml version="1.0"?>
<package format="2">
  <name>dynamic_view_planning</name>
  <version>0.0.0</version>
  <description>The dynamic_view_planning package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="rpl@todo.todo">rpl</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>ufomap</depend>
  <depend>ufomap_msgs</depend>
  <depend>ufomap_ros</depend>
  <depend>movements</depend>
  <depend>ig_active_reconstruction</depend>
  <depend>ig_active_reconstruction_ros</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  


</package>
